--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -181,6 +181,13 @@
     "Invoices/Cr Notes": "贷方发票/通知",
     "Invoices/DR Notes": "借方发票/通知",
     "Inquiries": "查询",
+
+    "Gl-Inquiries": "总账查询",
+    "Gl-Transactions": "总账交易",
+    "Inquires": "查询",
+    "GL-Parameters": "总账参数",
+    "Gl-Final Reports": "总账最终报告",
+
     "Requisitions": "申请",
     "cheques": "支票",
     "pettyCash": "零用现金",
@@ -935,8 +942,6 @@
       "select_a_policy": "选择保单",
       "policy_ID": "保单编号",
       "no_policy_found": "未找到保单"
-
-
     },
     "policy": {
       "underwriting_new_transaction": "核保：新交易",
@@ -2029,7 +2034,6 @@
     }
   },
   "fms": {
- 
     "org": "组织",
     "branch": "分支机构",
     "yr": "年份",
@@ -2058,10 +2062,32 @@
     "signSelect": "签署选择",
     "correction": "发送以更正",
     "reject": "拒绝",
+
+    "base-fms": {
+      "parameters": "参数",
+      "reconciliation": "对账",
+      "transactions": "交易",
+      "requistions": "申请",
+      "cheques": "支票",
+      "pettyCash": "备用金",
+      "receipts": "收据",
+      "receiptingPoints": "收据点",
+      "narration": "叙述",
+      "manageReceipt": "管理收据",
+      "receipting": "收据处理",
+      "receiptingExceptions": "收据异常",
+      "receiptAuthorization": "收据授权",
+      "receiptUpload": "上传收据",
+      "premiumSuspense": "保费挂账",
+      "directDebits": "直接扣款"
+    },
+
     "receipting": {
-      "receipting":"收据处理",
-      "cbReceipting":"现金簿收据处理",
+      "receipting": "收据处理",
+      "cbReceipting": "现金簿收据处理",
       "capture_receipt": "捕获收据",
+      
+        "clientSearch": "客户搜索",
    
       "currency": "货币",
       "payment_mode": "支付方式",
@@ -2089,68 +2115,67 @@
       "capitalInjection": "资本注入",
       "deductions": "扣除",
       "chargeAmount": "费用金额",
-      "back":"返回",
-      "clear":"清除",
-      "next":"下一个",
-      "mpesaCode":"M-Pesa 代码",
-      "cheque":"支票",
-      "eftNo":"电子转账号",
-      "yes":"是",
-      "no":"不是 ",
-      "editDescription":"编辑描述",
+      "back": "返回",
+      "clear": "清除",
+      "next": "下一个",
+      "mpesaCode": "M-Pesa 代码",
+      "cheque": "支票",
+      "eftNo": "电子转账号",
+      "yes": "是",
+      "no": "不是 ",
+      "editDescription": "编辑描述",
       "uploadFiles": "上传文件",
-      "accountType":"账户选择",
-      "searchCriteria":"搜索条件",
-      "search":"搜索",
-      "receiptSummary":"收据摘要",
-      "isReceiptPrinted?":"收据是否已打印",
-       
+      "accountType": "账户选择",
+      "searchCriteria": "搜索条件",
+      "search": "搜索",
+      "receiptSummary": "收据摘要",
+      "isReceiptPrinted?": "收据是否已打印",
+
       "receiptAmount": "收据金额",
-      "receiptAllocations":"收据分配",
-      "enterAmount":"输入金额",
+      "receiptAllocations": "收据分配",
+      "enterAmount": "输入金额",
       "save&print": "保存并打印",
-      "generateAcknowledgement":"生成确认单",
-      "save":"保存",
-      "descriptionIsRequired":"描述是必需的",
-      "enterFileDescription":"输入文件描述",
-      "fileDescription":"文件描述",
-      "open":"打开",
-      "filename":"文件名",
-      "policyNumber":"保单号",
-      "transactionNumber":"交易编号",
-      "batchNumber":"Batch Number",
-      "allocatedAmount":"分配金额",
-      "commissionAmount":"佣金额",
-     "includeCommission":"包含佣金",
-      "postFile":"发布文件",
-      "allocations":"分配",
-      "saveAllocation":"保存分配",
-      "comm?":"佣金？",
-      "filter":"过滤",
-      "commission":"佣金",
-     "balance":"B余额",
-     "amount":"金额",
-     "unallocatedAmount":"未分配金额",
+      "generateAcknowledgement": "生成确认单",
+      "save": "保存",
+      "descriptionIsRequired": "描述是必需的",
+      "enterFileDescription": "输入文件描述",
+      "fileDescription": "文件描述",
+      "open": "打开",
+      "filename": "文件名",
+      "policyNumber": "保单号",
+      "transactionNumber": "交易编号",
+      "batchNumber": "Batch Number",
+      "allocatedAmount": "分配金额",
+      "commissionAmount": "佣金额",
+      "includeCommission": "包含佣金",
+      "postFile": "发布文件",
+      "allocations": "分配",
+      "saveAllocation": "保存分配",
+      "comm?": "佣金？",
+      "filter": "过滤",
+      "commission": "佣金",
+      "balance": "B余额",
+      "amount": "金额",
+      "unallocatedAmount": "未分配金额",
       "client_name": "客户姓名",
 
-      "name":"名称",
-      "type":"类型",
-      "actions":"操作",
-      "select":"选择",
-      "showing":"显示",
-      "to":"到",
-      "of":"的",
-      "entries":"条目",
-      "finance":"财务",
-      "receiptCapture":"收据捕获",
-      "allocateReceipt":"分配收据",
-      "accountSelection":"账户选择",
-      "byPolicyNumber":"按保单号",
-      "byAccountNumber":"按账号",
-      "byDebitNote":"按借项通知单",
-      "byClientName":"按客户姓名",
-      "EnterSearchTerm":"输入搜索词"
-
+      "name": "名称",
+      "type": "类型",
+      "actions": "操作",
+      "select": "选择",
+      "showing": "显示",
+      "to": "到",
+      "of": "的",
+      "entries": "条目",
+      "finance": "财务",
+      "receiptCapture": "收据捕获",
+      "allocateReceipt": "分配收据",
+      "accountSelection": "账户选择",
+      "byPolicyNumber": "按保单号",
+      "byAccountNumber": "按账号",
+      "byDebitNote": "按借项通知单",
+      "byClientName": "按客户姓名",
+      "EnterSearchTerm": "输入搜索词"
     },
     "allocation": {
       "add_allocation": "添加分配",
