multilingual files update for service desk

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -2382,6 +2382,49 @@
     "authBy": "授权人",
     "clientName": "客户名称",
     "fee": "费用",
-    "servProviderFees": "服务提供商费用"
+    "servProviderFees": "服务提供商费用",
+    "categoryDefaultAssignee": "类别默认分配",
+    "system": "系统",
+    "requestCategory": "请求类别",
+    "levelOneDuration": "一级持续时间",
+    "levelTwoDuration": "二级持续时间",
+    "assignTo": "分配给",
+    "messageTemplate": "消息模板",
+    "saveDetails": "保存详情",
+    "telephoneNo": "电话号码",
+    "emailAddress": "电子邮件地址",
+    "accountNo": "账户编号",
+    "newCase": "新案例",
+    "TelephoneNoII": "电话号码 II",
+    "emailAddressII": "电子邮件地址 II",
+    "gender": "性别",
+    "maritalStatus": "婚姻状况",
+    "TINno": "税号",
+    "postalAddress": "邮政地址",
+    "incident": "事件",
+    "requestSource": "请求来源",
+    "accountType": "账户类型",
+    "account": "账户",
+    "captureDate": "记录日期",
+    "requestDate": "请求日期",
+    "reporterInitiator": "报告人/发起人",
+    "ownerAccountType": "所有者账户类型",
+    "closedBy": "关闭者",
+    "resolutionDate": "解决日期",
+    "preferredCommsMode": "首选通信方式",
+    "primaryMode": "主要模式",
+    "postedBy": "发布者",
+    "documentType": "文件类型",
+    "receivedBy": "接收者",
+    "uploadDocument": "上传文件",
+    "clients": "客户",
+    "intermediary": "中介",
+    "serviceProviders": "服务提供商",
+    "others": "其他",
+    "surname": "姓",
+    "otherNames": "其他名字",
+    "shortDesc": "简要描述",
+    "IDNo": "身份证号",
+    "telephone": "电话"
   }
 }
