--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2414,6 +2414,49 @@
     "authBy": "Genehmigt von",
     "clientName": "Kundenname",
     "fee": "Gebühr",
-    "servProviderFees": "Servicegebühren"
+    "servProviderFees": "Dienstleistergebühren",
+    "categoryDefaultAssignee": "Standardzuweisung der Kategorie",
+    "system": "System",
+    "requestCategory": "Anfragkategorie",
+    "levelOneDuration": "Dauer der ersten Stufe",
+    "levelTwoDuration": "Dauer der zweiten Stufe",
+    "assignTo": "Zuweisen an",
+    "messageTemplate": "Nachrichtenvorlage",
+    "saveDetails": "Details speichern",
+    "telephoneNo": "Telefonnummer",
+    "emailAddress": "E-Mail-Adresse",
+    "accountNo": "Konto-Nr.",
+    "newCase": "Neuer Fall",
+    "TelephoneNoII": "Telefonnummer II",
+    "emailAddressII": "E-Mail-Adresse II",
+    "gender": "Geschlecht",
+    "maritalStatus": "Familienstand",
+    "TINno": "Steuernummer",
+    "postalAddress": "Postadresse",
+    "incident": "Vorfall",
+    "requestSource": "Anfragequelle",
+    "accountType": "Kontotyp",
+    "account": "Konto",
+    "captureDate": "Erfassungsdatum",
+    "requestDate": "Anfragedatum",
+    "reporterInitiator": "Reporter/Initiator",
+    "ownerAccountType": "Besitzer-Kontotyp",
+    "closedBy": "Geschlossen von",
+    "resolutionDate": "Lösungsdatum",
+    "preferredCommsMode": "Bevorzugter Kommunikationsmodus",
+    "primaryMode": "Primärmodus",
+    "postedBy": "Veröffentlicht von",
+    "documentType": "Dokumenttyp",
+    "receivedBy": "Erhalten von",
+    "uploadDocument": "Dokument hochladen",
+    "clients": "Kunden",
+    "intermediary": "Vermittler",
+    "serviceProviders": "Dienstanbieter",
+    "others": "Andere",
+    "surname": "Nachname",
+    "otherNames": "Weitere Namen",
+    "shortDesc": "Kurzbeschreibung",
+    "IDNo": "Ausweisnummer",
+    "telephone": "Telefon"
   }
 }
