--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2946,6 +2946,49 @@
     "authBy": "Autorizado Por",
     "clientName": "Nombre del Cliente",
     "fee": "Tarifa",
-    "servProviderFees": "Tarifas del Proveedor de Servicios"
+    "servProviderFees": "Tarifas del proveedor de servicios",
+    "categoryDefaultAssignee": "Asignado predeterminado de la categoría",
+    "system": "Sistema",
+    "requestCategory": "Categoría de solicitud",
+    "levelOneDuration": "Duración del nivel uno",
+    "levelTwoDuration": "Duración del nivel dos",
+    "assignTo": "Asignar a",
+    "messageTemplate": "Plantilla de mensaje",
+    "saveDetails": "Guardar detalles",
+    "telephoneNo": "Número de teléfono",
+    "emailAddress": "Correo electrónico",
+    "accountNo": "Número de cuenta",
+    "newCase": "Nuevo caso",
+    "TelephoneNoII": "Número de teléfono II",
+    "emailAddressII": "Correo electrónico II",
+    "gender": "Género",
+    "maritalStatus": "Estado civil",
+    "TINno": "Número de identificación fiscal",
+    "postalAddress": "Dirección postal",
+    "incident": "Incidente",
+    "requestSource": "Fuente de solicitud",
+    "accountType": "Tipo de cuenta",
+    "account": "Cuenta",
+    "captureDate": "Fecha de captura",
+    "requestDate": "Fecha de solicitud",
+    "reporterInitiator": "Reportero/Iniciador",
+    "ownerAccountType": "Tipo de cuenta del propietario",
+    "closedBy": "Cerrado por",
+    "resolutionDate": "Fecha de resolución",
+    "preferredCommsMode": "Modo de comunicación preferido",
+    "primaryMode": "Modo primario",
+    "postedBy": "Publicado por",
+    "documentType": "Tipo de documento",
+    "receivedBy": "Recibido por",
+    "uploadDocument": "Subir documento",
+    "clients": "Clientes",
+    "intermediary": "Intermediario",
+    "serviceProviders": "Proveedores de servicios",
+    "others": "Otros",
+    "surname": "Apellido",
+    "otherNames": "Otros nombres",
+    "shortDesc": "Descripción corta",
+    "IDNo": "Número de identificación",
+    "telephone": "Teléfono"
   }
 }
