--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2940,6 +2940,49 @@
     "authBy": "Autorisé par",
     "clientName": "Nom du Client",
     "fee": "Frais",
-    "servProviderFees": "Frais de Prestataire de Service"
+    "servProviderFees": "Frais du prestataire de service",
+    "categoryDefaultAssignee": "Affectation par défaut de la catégorie",
+    "system": "Système",
+    "requestCategory": "Catégorie de demande",
+    "levelOneDuration": "Durée du niveau un",
+    "levelTwoDuration": "Durée du niveau deux",
+    "assignTo": "Attribuer à",
+    "messageTemplate": "Modèle de message",
+    "saveDetails": "Enregistrer les détails",
+    "telephoneNo": "Numéro de téléphone",
+    "emailAddress": "Adresse e-mail",
+    "accountNo": "Numéro de compte",
+    "newCase": "Nouveau cas",
+    "TelephoneNoII": "Numéro de téléphone II",
+    "emailAddressII": "Adresse e-mail II",
+    "gender": "Genre",
+    "maritalStatus": "État civil",
+    "TINno": "Numéro d’identification fiscale",
+    "postalAddress": "Adresse postale",
+    "incident": "Incident",
+    "requestSource": "Source de la demande",
+    "accountType": "Type de compte",
+    "account": "Compte",
+    "captureDate": "Date d’enregistrement",
+    "requestDate": "Date de demande",
+    "reporterInitiator": "Rapporteur/Initiateur",
+    "ownerAccountType": "Type de compte du propriétaire",
+    "closedBy": "Fermé par",
+    "resolutionDate": "Date de résolution",
+    "preferredCommsMode": "Mode de communication préféré",
+    "primaryMode": "Mode principal",
+    "postedBy": "Posté par",
+    "documentType": "Type de document",
+    "receivedBy": "Reçu par",
+    "uploadDocument": "Téléverser un document",
+    "clients": "Clients",
+    "intermediary": "Intermédiaire",
+    "serviceProviders": "Fournisseurs de services",
+    "others": "Autres",
+    "surname": "Nom de famille",
+    "otherNames": "Autres prénoms",
+    "shortDesc": "Brève description",
+    "IDNo": "Numéro d'identité",
+    "telephone": "Téléphone"
   }
 }
