--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2184,7 +2184,7 @@
       "eftNo":"EFT-Nummer",
       "yes":"Ja",
       "no":"Nein",
-      "editDescription":"Beschreibung bearbeiten",
+      "Edit Narration": "Erzählung bearbeiten",
       "uploadFiles": "Dateien hochladen",
       "accountType":"Kontotyp",
       "searchCriteria":"Suchkriterien",
