--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -2148,8 +2148,8 @@
     "eftNo":"Nambari ya EFT",
     "yes":"Ndio",
     "no":"Hapana",
-    "editDescription":"Hariri Maelezo",
-    "uploadFiles": "Pakia Faili",
+   "Edit Narration": "Hariri Maelezo",
+  "uploadFiles": "Pakia Faili",
     "accountType":"Aina ya akaunti",
     "searchCriteria":"Vigezo vya utafutaji",
     "search":"Tafuta",
