--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2646,11 +2646,8 @@
       "receipting":"Emisión de recibos",
       "cbReceipting":"Libro de caja-Emisión de recibos",
       "receipt_details": "Detalles del Recibo",
-    
-        "clientSearch": "Búsqueda de cliente",
- 
-    
-      "capture_receipt": "Capturar Recibo",
+    "clientSearch": "Búsqueda de cliente",
+  "capture_receipt": "Capturar Recibo",
       "currency": "Moneda",
       "payment_mode": "Modo de Pago",
       "bank_account": "Cuenta Bancaria",
@@ -2688,8 +2685,8 @@
       "eftNo":"Eft_No",
       "yes":"Sí",
       "no":"No",
-      "editDescription":"Editar descripción",
-      "uploadFiles": "Cargar Archivos",
+      "Edit Narration": "Editar narración",
+   "uploadFiles": "Cargar Archivos",
       "accountType":"Tipo de cuenta",
       "searchCriteria":"Criterios de búsqueda",
       "search":"Buscar",
