--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2158,6 +2158,10 @@
       "transactionNumber":"Transaktionsnummer",
       "batchNumber":"Batch Number",
       "allocatedAmount":"Zugewiesener Betrag",
+    
+      "Debit Note": "Lastschriftanzeige",
+   
+    
       "commissionAmount":"Provisionsbetrag",
      "includeCommission":"Provision einbeziehen",
       "postFile":"Datei posten",
