--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -2153,7 +2153,9 @@
     "accountType":"Aina ya akaunti",
     "searchCriteria":"Vigezo vya utafutaji",
     "search":"Tafuta",
-   
+    "Debit Note": "Noti ya Denari",
+ 
+  
      
     "receiptAmount": "Kiasi cha risiti",
     "receiptAllocations":"Mgao wa risiti",
