--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2689,6 +2689,9 @@
       "accountType":"Type de compte",
       "searchCriteria":"Critères de recherche",
       "search":"Rechercher",
+     
+      "Debit Note": "Note de débit",
+ 
     
       "receiptAmount": "Montant du reçu",
       "receiptAllocations":"Allocations de reçus",
