VQ-796-NORMAL-QUOTE: 1. Design change:Adding risk section. 2. Patch values on risk form screen. 3.Patch values on quotation form. 4.Delete quotation product. 5.Clear session storage when doing a normal quote. 6. Handling how data is rendered on Quotation summary screen. 7. Optimizing API calls across all screens.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -957,7 +957,8 @@
       "quotations": "Angebote",
       "select_a_policy": "Wählen Sie eine Police aus",
       "policy_ID": "Police-ID",
-      "no_policy_found": "Keine Police gefunden"
+      "no_policy_found": "Keine Police gefunden",
+      "rate" : "Satz"
 
 
     },
