--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -984,7 +984,8 @@
       "quotations": "Devis",
       "select_a_policy": "Sélectionnez une police",
       "policy_ID": "ID de la police",
-      "no_policy_found": "Aucune police trouvée"
+      "no_policy_found": "Aucune police trouvée",
+      "rate" : "Taux"
 
 
     },
