--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -955,7 +955,8 @@
       "quotations": "报价",
       "select_a_policy": "选择保单",
       "policy_ID": "保单编号",
-      "no_policy_found": "未找到保单"
+      "no_policy_found": "未找到保单",
+      "rate" : "率"
     },
     "policy": {
       "underwriting_new_transaction": "核保：新交易",
